Only build benchmark if it is the main project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ set(PROJECT_DESCRIPTION "Succinct variable-size static object store")
 add_library(VariableSizeObjectStore INTERFACE)
 target_include_directories(VariableSizeObjectStore INTERFACE include)
 
-add_subdirectory(extern/sdsl-lite)
+add_subdirectory(extern/sdsl-lite/lib)
+target_include_directories(VariableSizeObjectStore INTERFACE extern/sdsl-lite/include)
 target_link_libraries(VariableSizeObjectStore INTERFACE sdsl)
 
 set(TLX_INSTALL_INCLUDE_DIR tlx)
@@ -34,7 +35,9 @@ else()
     message(WARNING "Warning: LibUring not found. Continuing without it.")
 endif()
 
-file(GLOB benchmarkSources benchmark/**.cpp)
-add_executable(Benchmark ${benchmarkSources})
-target_compile_features(Benchmark PRIVATE cxx_std_17)
-target_link_libraries(Benchmark PRIVATE VariableSizeObjectStore)
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+    file(GLOB benchmarkSources benchmark/**.cpp)
+    add_executable(Benchmark ${benchmarkSources})
+    target_compile_features(Benchmark PRIVATE cxx_std_17)
+    target_link_libraries(Benchmark PRIVATE VariableSizeObjectStore)
+endif()
