--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,9 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     target_compile_features(Benchmark PRIVATE cxx_std_17)
     target_link_libraries(Benchmark PRIVATE VariableSizeObjectStore)
 endif()
+
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+    add_executable(Example example/example.cpp)
+    target_compile_features(Example PRIVATE cxx_std_17)
+    target_link_libraries(Example PRIVATE VariableSizeObjectStore)
+endif()
