Use pasta's select data structure

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "extern/ips2ra"]
 	path = extern/ips2ra
 	url = git@github.com:ips4o/ips2ra.git
+[submodule "extern/pasta"]
+	path = extern/pasta
+	url = git@github.com:kurpicz/pasta.git
