Added Wikipedia example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,11 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     add_executable(Example example/example.cpp)
     target_compile_features(Example PRIVATE cxx_std_20)
     target_link_libraries(Example PRIVATE VariableSizeObjectStore)
+
+    find_package(LibXml2)
+    add_executable(Wikipedia example/wikipedia.cpp)
+    target_compile_features(Wikipedia PRIVATE cxx_std_20)
+    target_include_directories(Wikipedia PUBLIC ${LIBXML2_INCLUDE_DIRS})
+    target_include_directories(Wikipedia PUBLIC extern/gzip-hpp/include)
+    target_link_libraries(Wikipedia PRIVATE VariableSizeObjectStore ${LIBXML2_LIBRARIES} z)
 endif()
