--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "extern/pasta"]
 	path = extern/pasta
 	url = git@github.com:kurpicz/pasta.git
+[submodule "extern/gzip-hpp"]
+	path = extern/gzip-hpp
+	url = git@github.com:mapbox/gzip-hpp.git
