--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,10 +70,14 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     target_compile_features(Example PRIVATE cxx_std_20)
     target_link_libraries(Example PRIVATE VariableSizeObjectStore)
 
+    add_custom_command(OUTPUT liblz4.so COMMAND make -j4 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/extern/lz4)
+    add_custom_target(LibLz4 DEPENDS liblz4.so)
+
     find_package(LibXml2)
     add_executable(Wikipedia example/wikipedia.cpp)
+    add_dependencies(Wikipedia LibLz4)
     target_compile_features(Wikipedia PRIVATE cxx_std_20)
     target_include_directories(Wikipedia PUBLIC ${LIBXML2_INCLUDE_DIRS})
-    target_include_directories(Wikipedia PUBLIC extern/gzip-hpp/include)
-    target_link_libraries(Wikipedia PRIVATE VariableSizeObjectStore ${LIBXML2_LIBRARIES} z)
+    target_include_directories(Wikipedia PUBLIC extern/lz4/lib)
+    target_link_libraries(Wikipedia PRIVATE VariableSizeObjectStore ${LIBXML2_LIBRARIES} ${CMAKE_CURRENT_SOURCE_DIR}/extern/lz4/lib/liblz4.so)
 endif()
