--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "extern/ips2ra"]
 	path = extern/ips2ra
 	url = git@github.com:ips4o/ips2ra.git
-[submodule "extern/pasta"]
-	path = extern/pasta
-	url = git@github.com:kurpicz/pasta.git
 [submodule "extern/lz4"]
 	path = extern/lz4
 	url = git@github.com:lz4/lz4.git
+[submodule "extern/pasta-bit-vector"]
+	path = extern/pasta-bit-vector
+	url = git@github.com:pasta-toolbox/bit_vector.git
