Use ipsx xml parser to avoid taking too much RAM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,5 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     add_dependencies(Wikipedia LibLz4)
     target_compile_features(Wikipedia PRIVATE cxx_std_20)
     target_include_directories(Wikipedia PUBLIC extern/lz4/lib)
-    target_include_directories(Wikipedia SYSTEM PUBLIC extern/rapidxml)
-    target_link_libraries(Wikipedia PRIVATE VariableSizeObjectStore ${LIBXML2_LIBRARIES} ${CMAKE_CURRENT_SOURCE_DIR}/extern/lz4/lib/liblz4.so)
+    target_link_libraries(Wikipedia PRIVATE VariableSizeObjectStore ${CMAKE_CURRENT_SOURCE_DIR}/extern/lz4/lib/liblz4.so)
 endif()
