Rename to PaCHash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,79 +1,77 @@
 cmake_minimum_required(VERSION 3.10)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-project(PactHash)
+project(PaCHash)
 set(PROJECT_VENDOR "Hans-Peter Lehmann")
-set(PROJECT_URL "https://github.com/ByteHamster/PactHash")
+set(PROJECT_URL "https://github.com/ByteHamster/PaCHash")
 set(PROJECT_DESCRIPTION "Succinct variable size static object store")
 
 if(CMAKE_BUILD_TYPE STREQUAL "Release" AND CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     add_compile_options(-march=native)
 endif()
 
-add_library(PactHash INTERFACE)
-target_include_directories(PactHash INTERFACE include)
-target_compile_options(PactHash INTERFACE -Wall -Wextra -Wpedantic)
+add_library(PaCHash INTERFACE)
+target_include_directories(PaCHash INTERFACE include)
+target_compile_options(PaCHash INTERFACE -Wall -Wextra -Wpedantic)
 
 add_subdirectory(extern/sdsl-lite/external EXCLUDE_FROM_ALL)
 add_subdirectory(extern/sdsl-lite/include EXCLUDE_FROM_ALL)
 add_subdirectory(extern/sdsl-lite/lib EXCLUDE_FROM_ALL)
-target_include_directories(PactHash SYSTEM INTERFACE extern/sdsl-lite/include)
-target_link_libraries(PactHash INTERFACE sdsl)
+target_include_directories(PaCHash SYSTEM INTERFACE extern/sdsl-lite/include)
+target_link_libraries(PaCHash INTERFACE sdsl)
 
 set(TLX_INSTALL_INCLUDE_DIR tlx CACHE PATH "Workaround for TLX breaking the first cmake call")
 add_subdirectory(extern/ips2ra EXCLUDE_FROM_ALL)
-target_include_directories(PactHash SYSTEM INTERFACE extern/ips2ra/include)
-target_include_directories(PactHash SYSTEM INTERFACE extern/ips2ra/extern/tlx/tlx)
-target_link_libraries(PactHash INTERFACE ips2ra tlx)
+target_include_directories(PaCHash SYSTEM INTERFACE extern/ips2ra/include)
+target_include_directories(PaCHash SYSTEM INTERFACE extern/ips2ra/extern/tlx/tlx)
+target_link_libraries(PaCHash INTERFACE ips2ra tlx)
 
 add_subdirectory(extern/pasta-bit-vector EXCLUDE_FROM_ALL)
-target_link_libraries(PactHash INTERFACE pasta_bit_vector)
-target_include_directories(PactHash SYSTEM INTERFACE extern/pasta-bit-vector)
+target_link_libraries(PaCHash INTERFACE pasta_bit_vector)
+target_include_directories(PaCHash SYSTEM INTERFACE extern/pasta-bit-vector)
 
 find_package(LibAIO)
 if(LibAIO_FOUND)
-    target_link_libraries(PactHash INTERFACE ${LIBAIO_LIBRARIES})
-    target_compile_definitions(PactHash INTERFACE HAS_LIBAIO)
-else()
-    message(WARNING "Warning: LibAIO not found. Continuing without it.")
+    target_link_libraries(PaCHash INTERFACE ${LIBAIO_LIBRARIES})
+    target_compile_definitions(PaCHash INTERFACE HAS_LIBAIO)
 endif()
 
 find_package(LibUring)
 if(LibUring_FOUND)
-    target_link_libraries(PactHash INTERFACE uring)
-    target_compile_definitions(PactHash INTERFACE HAS_LIBURING)
+    target_link_libraries(PaCHash INTERFACE uring)
+    target_compile_definitions(PaCHash INTERFACE HAS_LIBURING)
 else()
-    message(WARNING "Warning: LibUring not found. Continuing without it.")
+    message(WARNING "Warning: LibUring not found. Continuing without it. Note that this reduces the performance significantly.")
 endif()
 
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     add_executable(Benchmark benchmark/benchmark.cpp)
     target_compile_features(Benchmark PRIVATE cxx_std_20)
-    target_link_libraries(Benchmark PRIVATE PactHash)
+    target_link_libraries(Benchmark PRIVATE PaCHash)
 
     add_executable(BenchmarkBaseline benchmark/baseline.cpp)
     target_compile_features(BenchmarkBaseline PRIVATE cxx_std_20)
-    target_link_libraries(BenchmarkBaseline PRIVATE PactHash)
+    target_link_libraries(BenchmarkBaseline PRIVATE PaCHash)
 
     add_executable(BenchmarkMerge benchmark/merge.cpp)
     target_compile_features(BenchmarkMerge PRIVATE cxx_std_20)
-    target_link_libraries(BenchmarkMerge PRIVATE PactHash)
+    target_link_libraries(BenchmarkMerge PRIVATE PaCHash)
 
     add_executable(Example example/example.cpp)
     target_compile_features(Example PRIVATE cxx_std_20)
-    target_link_libraries(Example PRIVATE PactHash)
+    target_link_libraries(Example PRIVATE PaCHash)
 
     add_executable(Query example/query.cpp)
     target_compile_features(Query PRIVATE cxx_std_20)
-    target_link_libraries(Query PRIVATE PactHash)
+    target_link_libraries(Query PRIVATE PaCHash)
 
     add_executable(Twitter example/twitter.cpp)
     target_compile_features(Twitter PRIVATE cxx_std_20)
-    target_link_libraries(Twitter PRIVATE PactHash)
+    target_link_libraries(Twitter PRIVATE PaCHash)
 
     add_executable(Uniprot example/uniprot.cpp)
     target_compile_features(Uniprot PRIVATE cxx_std_20)
-    target_link_libraries(Uniprot PRIVATE PactHash)
+    target_link_libraries(Uniprot PRIVATE PaCHash)
 
     add_custom_command(OUTPUT liblz4.so COMMAND make -j4 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/extern/lz4)
     add_custom_target(LibLz4 DEPENDS liblz4.so)
@@ -82,5 +80,5 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     add_dependencies(Wikipedia LibLz4)
     target_compile_features(Wikipedia PRIVATE cxx_std_20)
     target_include_directories(Wikipedia PUBLIC extern/lz4/lib)
-    target_link_libraries(Wikipedia PRIVATE PactHash ${CMAKE_CURRENT_SOURCE_DIR}/extern/lz4/lib/liblz4.so)
+    target_link_libraries(Wikipedia PRIVATE PaCHash ${CMAKE_CURRENT_SOURCE_DIR}/extern/lz4/lib/liblz4.so)
 endif()
