--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "extern/pasta-bit-vector"]
 	path = extern/pasta-bit-vector
 	url = git@github.com:pasta-toolbox/bit_vector.git
+[submodule "extern/util"]
+	path = extern/util
+	url = git@github.com:ByteHamster/Util.git
